# mcp-netops

./: README.md  pyproject.toml
mcp_gateway/: __init__.py  config.py  main.py
mcp_gateway/inventory/: inventory.yaml
mcp_gateway/models/: auth.py  inventory.py  mcp.py
mcp_gateway/routes/: mcp_routes.py
mcp_gateway/services/: audit.py  auth.py  executor.py  inventory_service.py  parser.py  session.py
scripts/: chat_llm.py  chat_llm_web.py
